RESOLVED FIXED313683
spotify.com: Spotify Search Failure
https://bugs.webkit.org/show_bug.cgi?id=313683
Summary spotify.com: Spotify Search Failure
joanne_pan2
Reported 2026-04-29 13:52:09 PDT
While testing behavior for recent searches on Spotify, found we cannot search at all. There’s a huge magnifying glass icon potentially blocking the search bar. Steps provided: 1. Navigate to Spotify web player (https://open.spotify.com) 2. Log into Spotify account if required 3. Click on the search bar at the top of the Spotify interface 4. Observe the "Recent Searches" list that appears below the search bar 5. Verify that recent search results are visible and appear clickable 6. Click on any item from the Recent Searches list (artist, album, song, or playlist) 7. Observe the response and check if navigation occurs 8. Try clicking on multiple different recent search items Expected results: - Recent search items should be displayed properly in the dropdown list - Clicking on any recent search result should navigate to the corresponding content page - User should be taken to the appropriate artist page, album view, song detail, or playlist - Navigation should be smooth and immediate upon clicking - All recent search items should remain functional and responsive to clicks Actual results: - Search bar is initially visible, but when tapping in Step 3, it becomes blocked.
Attachments
joanne_pan2
Comment 1 2026-04-29 13:52:20 PDT
joanne_pan2
Comment 2 2026-04-29 14:15:17 PDT
EWS
Comment 3 2026-04-30 15:22:40 PDT
Committed 312398@main (9806acafee66): <https://commits.webkit.org/312398@main> Reviewed commits have been landed. Closing PR #63923 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.