spotify.com: Spotify Search Failure https://bugs.webkit.org/show_bug.cgi?id=313683 rdar://175017084

Reviewed by Aditya Keerthi.

The problem: The originating issue: https://commits.webkit.org/274268@main was that the volume
slider was impossible to use since it was too small and thus a quirk was
made to have Spotify serve the mobile version to iPad. Then in https://commits.webkit.org/298591@main
Spotify started blocking iPad mini UA entirely, and the previous quirk was removed,
and to unblock iPad mini users https://commits.webkit.org/299301@main was landed.
The commit message for the last patch states that it is only for "iPad mini",
but the code applied to all iOS devices, thus also affecting full size iPads,
and the mobile search UI is now broken due to the quirk only intending to be for smaller screens.

The fix: Remove Spotify from needsIPhoneUserAgent and move the iPhone UA override
into effectiveContentModeAfterAdjustingPolicies gated on !useDesktopBrowsingMode.
iPad Mini still gets iPhone UA (desktop browsing not recommended for its screen class
so it hits the gate) and full-size iPad gets desktop mode with working search as well
as both the volume and time slider being draggable (the originating issue).

* Source/WebCore/page/Quirks.cpp:
* Source/WebCore/page/Quirks.h:
* Source/WebCore/platform/UserAgent.h:
* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::effectiveContentModeAfterAdjustingPolicies):

Canonical link: https://commits.webkit.org/312398@main